Kiwix 0.9.1
* FIXED: Buggy pagination in fulltext result page
* FIXED: kiwix-serve XSS attack vulnerability (#763)
* FIXED: Better language ISO codes recognition in library
* FIXED: Wrong tab printed (#820)
* FIXED: Select text by focusing the searchbox, instead of deleting it (#842)
* NEW: Minimal skin

Kiwix 0.9
* FIXED: Public IP address detection on OSX (#658)
* FIXED: Fulltext search results page for pattern including
  mustbeurlencoded characters
* FIXED: Kiwix-serve bug under Windows with library containing
  relative paths
* FIXED: Unclear usage() for console tools
* FIXED: Crashing UI with Kannada (kn), Oriya (or) and Georgian (ka)
  (#413)
* FIXED: Unavailable kiwix-serve from the UI on Linux, if not installed (#411)
* FIXED: kiwix-serve UI for non-javascript browsers like Dillo (#587)
* FIXED: kiwix-serve crash if really long URL (#400)
* FIXED: kiwix-serve welcome page Doctype HTML line fix (for Opera)
* FIXED: Small display issue with multilingual ZIM file
* FIXED: Toolbar buttons order
* FIXED: pause/resume refreshing problem in library
* FIXED: Argument forwarding in kiwix-launcher
* FIXED: Copy to clipboard if inverted colors (#414)
* FIXED: "Select all" with inverted colors
* FIXED: Browser widget resizing sync. with the window (#382)
* FIXED: Encoding issue in kiwix-serve 404 error message
* FIXED: Abstruse index names (#84)
* FIXED: Duplicate suggestions under certain conditions
* FIXED: kiwix-serve index page for chrome/chromium
* FIXED: Buggy kiwix-serve suggestion click handling (#463)
* FIXED: Hanging page loading with specific pages on Win&Mac (#440, #376)
* FIXED: Buggy tabs with RTL disposition (#424)
* FIXED: Small bug in library filtering (by language)
* FIXED: "Illegal instruction" crash with old CPUs without SSE2 (#478)
* FIXED: Download problem with Metalink files containing magnet links
* FIXED: Allow fullscreen for videos
* FIXED: Icons for a better rendering on "retina" (like) screens